Fix fallback version string in build script
If Git is not available, the application version would be set to
`v$(CMAKE_PROJECT_VERSION)`. This is a literal string and the version
does not get substituted by CMake. It should be
`v${CMAKE_PROJECT_VERSION}` instead.

Signed-off-by: Sefa Eyeoglu <contact@scrumplex.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ if(GIT_FOUND)
     OUTPUT_VARIABLE VCS_TAG
     OUTPUT_STRIP_TRAILING_WHITESPACE)
 else()
-  set(VCS_TAG "v$(CMAKE_PROJECT_VERSION)")
+  set(VCS_TAG "v${CMAKE_PROJECT_VERSION}")
   set(VCS_HASH "unknown")
   set(VCS_BRANCH "unknown")
 endif()
