--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,7 +103,8 @@ jobs:
             clang-18 lld-18 ninja-build \
             qt6-base-dev libqt6svg6-dev libqt6svg6 \
             qt6-tools-dev qt6-tools-dev-tools libgl1-mesa-dev \
-            libjack-dev libsndfile1-dev libpulse-dev
+            libjack-dev libsndfile1-dev libpulse-dev \
+            fuse
           echo 'export PATH="/usr/local/opt/llvm/bin:$PATH"' >> ~/.bash_profile
       - name: "Prepare build"
         run: |
