fix LICENSE path in github workflow for generating AppImage

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -142,7 +142,7 @@ jobs:
             -qmake=/usr/lib/qt6/bin/qmake6 \
             -verbose=10
           mkdir -p appdir/usr/share/licenses/VGMTrans
-          cp ${{ github.workspace }}/LICENSE/LICENSE appdir/usr/share/licenses/VGMTrans/
+          cp ${{ github.workspace }}/LICENSE appdir/usr/share/licenses/VGMTrans/
           mv VGMTrans*.AppImage VGMTrans.AppImage
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
