--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/minizip-ng"]
 	path = lib/minizip-ng
 	url = https://github.com/zlib-ng/minizip-ng.git
+[submodule "lib/libchdr"]
+	path = lib/libchdr
+	url = https://github.com/rtissera/libchdr.git
