update src/main/CMakeLists.tzt so that vendored zlib-ng is accessible to libchdr

--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -13,11 +13,15 @@ if (USE_VENDORED_ZLIBNG)
   set(ZLIB_ENABLE_TESTS OFF)
   set(ZLIBNG_ENABLE_TESTS OFF)
   set(WITH_GTEST OFF)
+  set(ZLIB_COMPAT ON CACHE BOOL "Build zlib-ng with zlib-compatible API" FORCE)
   add_subdirectory("${PROJECT_SOURCE_DIR}/lib/zlib-ng" "${CMAKE_BINARY_DIR}/lib/zlib-ng" EXCLUDE_FROM_ALL)
 
-  set(ZLIBNG_FOUND TRUE)
-  set(ZLIBNG_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/lib/zlib-ng" "${CMAKE_BINARY_DIR}/lib/zlib-ng")
-  set(ZLIBNG_LIBRARY $<TARGET_FILE:zlibstatic>)
+#  set(ZLIBNG_FOUND TRUE)
+#  set(ZLIBNG_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/lib/zlib-ng" "${CMAKE_BINARY_DIR}/lib/zlib-ng")
+#  set(ZLIBNG_LIBRARY $<TARGET_FILE:zlibstatic>)
+
+  # ensure libchdr can find this build when searching for ZLIB
+  list(PREPEND CMAKE_PREFIX_PATH "${CMAKE_BINARY_DIR}/lib/zlib-ng")
 endif()
 
 # Configure minizip-ng to use zlib and none of the other options
