--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -5,6 +5,7 @@
 # we added it in the root CMakeLists.txt file.
 
 option(USE_VENDORED_ZLIBNG "Use the vendored version of zlib-ng" ON)
+set(ZLIB_COMPAT ON CACHE BOOL "Compile zlib-ng with zlib compatible API" FORCE)
 
 if (USE_VENDORED_ZLIBNG)
   #include zlib-ng sans tests
@@ -15,9 +16,9 @@ if (USE_VENDORED_ZLIBNG)
   set(WITH_GTEST OFF)
   add_subdirectory("${PROJECT_SOURCE_DIR}/lib/zlib-ng" "${CMAKE_BINARY_DIR}/lib/zlib-ng" EXCLUDE_FROM_ALL)
 
-  set(ZLIBNG_FOUND TRUE)
-  set(ZLIBNG_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/lib/zlib-ng" "${CMAKE_BINARY_DIR}/lib/zlib-ng")
-  set(ZLIBNG_LIBRARY $<TARGET_FILE:zlibstatic>)
+  set(ZLIB_FOUND TRUE)
+  set(ZLIB_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/lib/zlib-ng" "${CMAKE_BINARY_DIR}/lib/zlib-ng")
+  set(ZLIB_LIBRARIES $<TARGET_FILE:zlibstatic>)
 endif()
 
 # Configure minizip-ng to use zlib and none of the other options
@@ -32,6 +33,8 @@ set(MZ_WZAES OFF)
 set(MZ_OPENSSL OFF)
 set(MZ_DECOMPRESS_ONLY ON)
 set(SKIP_INSTALL_ALL ON)
+set(MZ_FETCH_LIBS OFF CACHE BOOL "Disable minizip-ng third-party fetching" FORCE)
+set(MZ_FORCE_FETCH_LIBS OFF CACHE BOOL "Disable minizip-ng forced fetching" FORCE)
 
 # Add minizip-ng subdirectory
 add_subdirectory("${PROJECT_SOURCE_DIR}/lib/minizip-ng" "${CMAKE_BINARY_DIR}/lib/minizip-ng" EXCLUDE_FROM_ALL)
@@ -46,6 +49,8 @@ set(USE_SYSTEM_BZ2 OFF CACHE BOOL "Build with system bzip2 if possible" FORCE)
 set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build libunarr as a shared library" FORCE)
 set(USE_SYSTEM_ZLIB OFF CACHE BOOL "Build with system zlib if possible" FORCE)
 add_subdirectory("${PROJECT_SOURCE_DIR}/lib/unarr" "${CMAKE_BINARY_DIR}/lib/unarr" EXCLUDE_FROM_ALL)
+
+add_subdirectory("${PROJECT_SOURCE_DIR}/lib/libchdr" "${CMAKE_BINARY_DIR}/lib/libchdr" EXCLUDE_FROM_ALL)
 
 file(GLOB_RECURSE MAIN_FILES "${PROJECT_SOURCE_DIR}/src/main/*.cpp"
      "${PROJECT_SOURCE_DIR}/src/main/*.h")
@@ -68,5 +73,5 @@ target_include_directories(vgmtranscore PUBLIC
         ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(
   vgmtranscore
-  PUBLIC spdlog::spdlog unarr zlibstatic minizip tinyxml mio
+  PUBLIC spdlog::spdlog unarr zlibstatic minizip tinyxml mio chdr-static
 )
