add ToastHost class to enable displaying multiple stacked Toasts at once.

--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -82,6 +82,8 @@ add_executable(
   widgets/StatusBarContent.h
   widgets/Toast.cpp
   widgets/Toast.h
+  widgets/ToastHost.cpp
+  widgets/ToastHost.h
   widgets/TableView.cpp
   widgets/TableView.h
   widgets/TitleBar.cpp
