--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -177,6 +177,15 @@ jobs:
          with:
             arch: ${{ matrix.target != 'x64' && (format('{0}_{1}', 'amd64', matrix.target)) || matrix.target }}
 
+       - name: Install Qt
+         uses: jurplel/install-qt-action@v3
+         with:
+           aqtversion: '==3.1.*'
+           version: '6.8.3'
+           host: 'windows'
+           target: 'desktop'
+           arch: 'win64_msvc2022_64'
+           
        - name: "Prepare build"
          run: |
           echo "BRANCH=$(git rev-parse --abbrev-ref HEAD)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
