--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,11 +127,14 @@ jobs:
           sudo ./llvm.sh 20
 
           sudo apt-get update
+          # libxcb-cursor-dev is missed by the Qt action
           sudo apt-get install -y --no-install-recommends \
             pkg-config \
             clang-20 lld-20 \
             ninja-build \
-            fuse
+            fuse \
+            libxcb-cursor-dev
+
           echo 'export PATH="/usr/local/opt/llvm/bin:$PATH"' >> ~/.bash_profile
 
       - name: "Prepare build"
