--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -1,48 +1,49 @@
-# Add minizip-ng as a dependency
-# On initial set up, minizip-ng decides whether to use zlib-ng (over regular zlib) by searching for the lib, but it
-# wouldn't find it because it hasn't been built yet. We trick its CMake script by setting the variables that indicate
-# the lib was found with values that will be correct once it is built. zlib-ng will be built before minizip-ng because
-# we added it in the root CMakeLists.txt file.
+# Add zlib and minizip dependencies
+# Prefer system zlib; otherwise build vendored static
+option(USE_SYSTEM_ZLIB "Use system-provided zlib if available" ON)
 
-option(USE_VENDORED_ZLIBNG "Use the vendored version of zlib-ng" ON)
-set(ZLIB_COMPAT ON CACHE BOOL "Compile zlib-ng with zlib compatible API" FORCE)
-
-if (USE_VENDORED_ZLIBNG)
-  #include zlib-ng sans tests
-  set(BUILD_SHARED_LIBS OFF)
-
-  set(ZLIB_ENABLE_TESTS OFF)
-  set(ZLIBNG_ENABLE_TESTS OFF)
-  set(WITH_GTEST OFF)
-  add_subdirectory("${PROJECT_SOURCE_DIR}/lib/zlib-ng" "${CMAKE_BINARY_DIR}/lib/zlib-ng" EXCLUDE_FROM_ALL)
-
-  set(ZLIB_FOUND TRUE)
-  set(ZLIB_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/lib/zlib-ng" "${CMAKE_BINARY_DIR}/lib/zlib-ng")
-  set(ZLIB_LIBRARIES $<TARGET_FILE:zlibstatic>)
+if (USE_SYSTEM_ZLIB)
+  find_package(ZLIB QUIET)
 endif()
 
-# Configure minizip-ng to use zlib and none of the other options
-set(MZ_COMPAT ON)
-set(MZ_ZLIB ON)
-set(MZ_BZIP2 OFF)
-set(MZ_LZMA OFF)
-set(MZ_ZSTD OFF)
-set(MZ_LIBCOMP OFF)
-set(MZ_PKCRYPT OFF)
-set(MZ_WZAES OFF)
-set(MZ_OPENSSL OFF)
-set(MZ_DECOMPRESS_ONLY ON)
-set(SKIP_INSTALL_ALL ON)
-set(MZ_FETCH_LIBS OFF CACHE BOOL "Disable minizip-ng third-party fetching" FORCE)
-set(MZ_FORCE_FETCH_LIBS OFF CACHE BOOL "Disable minizip-ng forced fetching" FORCE)
+if (NOT ZLIB_FOUND)
+  message(STATUS "System zlib not found; building vendored zlib (static)")
 
-# Add minizip-ng subdirectory
-add_subdirectory("${PROJECT_SOURCE_DIR}/lib/minizip-ng" "${CMAKE_BINARY_DIR}/lib/minizip-ng" EXCLUDE_FROM_ALL)
+  set(ZLIB_BUILD_TESTING OFF CACHE BOOL "" FORCE)
+  set(ZLIB_BUILD_SHARED  OFF CACHE BOOL "" FORCE)
+  set(ZLIB_BUILD_STATIC  ON  CACHE BOOL "" FORCE)
+  set(ZLIB_INSTALL       OFF CACHE BOOL "" FORCE)
 
-if (USE_VENDORED_ZLIBNG)
-  add_dependencies(minizip zlibstatic)
+  add_subdirectory("${PROJECT_SOURCE_DIR}/lib/zlib"
+          "${CMAKE_BINARY_DIR}/lib/zlib"
+          EXCLUDE_FROM_ALL)
+  add_library(ZLIB::ZLIB ALIAS zlibstatic)
+else()
+  # Make a canonical imported target if FindZLIB didn't provide one
+  if (NOT TARGET ZLIB::ZLIB)
+    add_library(ZLIB::ZLIB UNKNOWN IMPORTED)
+    set_target_properties(ZLIB::ZLIB PROPERTIES
+            IMPORTED_LOCATION "${ZLIB_LIBRARY}"
+            INTERFACE_INCLUDE_DIRECTORIES "${ZLIB_INCLUDE_DIRS}")
+  endif()
 endif()
 
+# Add minizip from our vendored zlib
+set(MINIZIP_DIR "${PROJECT_SOURCE_DIR}/lib/zlib/contrib/minizip")
+
+add_library(minizip STATIC
+        "${MINIZIP_DIR}/ioapi.c"
+        "${MINIZIP_DIR}/unzip.c"
+)
+if (WIN32)
+  target_sources(minizip PRIVATE "${MINIZIP_DIR}/iowin32.c")
+endif()
+
+target_include_directories(minizip PUBLIC "${MINIZIP_DIR}")
+target_link_libraries(minizip PUBLIC ZLIB::ZLIB)
+add_library(MINIZIP::minizip ALIAS minizip)
+
+# Add libunarr
 message(INFO "Using built-in unarr")
 set(ENABLE_7Z OFF CACHE BOOL "Build with 7z support" FORCE)
 set(USE_SYSTEM_BZ2 OFF CACHE BOOL "Build with system bzip2 if possible" FORCE)
@@ -50,6 +51,7 @@ set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build libunarr as a shared library" FORCE)
 set(USE_SYSTEM_ZLIB OFF CACHE BOOL "Build with system zlib if possible" FORCE)
 add_subdirectory("${PROJECT_SOURCE_DIR}/lib/unarr" "${CMAKE_BINARY_DIR}/lib/unarr" EXCLUDE_FROM_ALL)
 
+# Add libchdr
 add_subdirectory("${PROJECT_SOURCE_DIR}/lib/libchdr" "${CMAKE_BINARY_DIR}/lib/libchdr" EXCLUDE_FROM_ALL)
 
 file(GLOB_RECURSE MAIN_FILES "${PROJECT_SOURCE_DIR}/src/main/*.cpp"
@@ -73,5 +75,5 @@ target_include_directories(vgmtranscore PUBLIC
         ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(
   vgmtranscore
-  PUBLIC spdlog::spdlog unarr zlibstatic minizip tinyxml mio chdr-static
+  PUBLIC spdlog::spdlog unarr ZLIB::ZLIB MINIZIP::minizip tinyxml mio chdr-static
 )
