--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,16 +42,14 @@ jobs:
         run: cmake --preset "macos-${{ matrix.target }}"
 
       - name: "Build project"
-        # $(sysctl -n hw.logicalcpu) is required to not make XCode spawn infinite threads...
         run: cmake --build --preset "macos-${{ matrix.target }}-release" \
-          --parallel $(sysctl -n hw.logicalcpu) \
           --target vgmtrans
 
       - name: "Package DMG (macOS)"
         working-directory: "build/macos-${{ matrix.target }}/"
         run: |
           macdeployqt \
-            bin/VGMTrans.app \
+            bin/Release/VGMTrans.app \
             -verbose=3 -always-overwrite -appstore-compliant
 
       - name: "Checkout create-dmg"
@@ -68,7 +66,7 @@ jobs:
           ./create-dmg/create-dmg \
             --no-internet-enable \
             --volname "VGMTrans" \
-            --volicon "bin/VGMTrans.app/Contents/Resources/appicon.icns" \
+            --volicon "bin/Release/VGMTrans.app/Contents/Resources/appicon.icns" \
             --background "${{ github.workspace }}/bin/dmg/bg.tif" \
             --text-size 12 \
             --window-pos 400 400 \
@@ -79,20 +77,20 @@ jobs:
             --app-drop-link 520 97 \
             --add-file "Unblock & Sign" "${{ github.workspace }}/bin/dmg/selfsign" 313 280 \
             --add-file "README.txt" "${{ github.workspace }}/bin/dmg/README.txt" 520 280 \
-            "bin/VGMTrans-${{ github.sha }}.dmg" \
-            "bin"
+            "bin/Release/VGMTrans-${{ github.sha }}.dmg" \
+            "bin/Release"
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v3
         if: ${{ github.event_name != 'pull_request' }}
         with:
           subject-name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-${{ matrix.target }}-${{ runner.os }}
-          subject-path: "build/macos-${{ matrix.target }}/bin/VGMTrans-${{ github.sha }}.dmg"
+          subject-path: "build/macos-${{ matrix.target }}/bin/Release/VGMTrans-${{ github.sha }}.dmg"
 
       - name: "Upload artifact"
         uses: actions/upload-artifact@v4
         with:
           name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-${{ matrix.target }}-${{ runner.os }}.dmg
-          path: "build/macos-${{ matrix.target }}/bin/VGMTrans-${{ github.sha }}.dmg"
+          path: "build/macos-${{ matrix.target }}/bin/Release/VGMTrans-${{ github.sha }}.dmg"
           
   linux:
     runs-on: ubuntu-22.04
@@ -146,7 +144,6 @@ jobs:
           export CC=clang-20
           export CXX=clang++-20
           cmake --preset linux-x64 \
-            -G "Ninja Multi-Config" \
             -DCMAKE_INSTALL_PREFIX=/usr
 
       - name: "Build project"
