add a new QSlider subclass ClickJumpSlider and use it as our playback slider. It enables macOS click-to-jump behavior across platforms

--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -74,6 +74,8 @@ add_executable(
   util/LambdaEventFilter.h
   util/UIHelpers.cpp
   util/UIHelpers.h
+  widgets/ClickJumpSlider.cpp
+  widgets/ClickJumpSlider.h
   widgets/MarqueeLabel.cpp
   widgets/MarqueeLabel.h
   widgets/SnappingSplitter.cpp
