update zlib to latest commit on develop branch so that zconf.h isn't always deleted

--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -8,10 +8,16 @@ endif()
 
 if (NOT ZLIB_FOUND)
   message(STATUS "System zlib not found; building vendored zlib (static)")
-  set(ZLIB_BUILD_EXAMPLES OFF CACHE BOOL "Build zlib examples" FORCE)
+  set(ZLIB_BUILD_TESTING OFF CACHE BOOL "Enable Zlib Examples as tests"              FORCE)
+  set(ZLIB_BUILD_SHARED  OFF CACHE BOOL "Enable building zlib shared library"        FORCE)
+  set(ZLIB_BUILD_STATIC  ON  CACHE BOOL "Enable building zlib static library"        FORCE)
+  set(ZLIB_BUILD_MINIZIP OFF CACHE BOOL "Enable building libminizip contrib library" FORCE)
+  set(ZLIB_INSTALL       OFF CACHE BOOL "Enable installation of zlib"                FORCE)
+
   add_subdirectory("${PROJECT_SOURCE_DIR}/lib/zlib"
           "${CMAKE_BINARY_DIR}/lib/zlib"
           EXCLUDE_FROM_ALL)
+
   add_library(ZLIB::ZLIB ALIAS zlibstatic)
 endif()
 
@@ -38,6 +44,11 @@ set(USE_SYSTEM_ZLIB OFF CACHE BOOL "Build with system zlib if possible" FORCE)
 add_subdirectory("${PROJECT_SOURCE_DIR}/lib/unarr" "${CMAKE_BINARY_DIR}/lib/unarr" EXCLUDE_FROM_ALL)
 
 # Add libchdr
+if (ZLIB_FOUND)
+  set(WITH_SYSTEM_ZLIB ON  CACHE BOOL "" FORCE)
+else()
+  set(WITH_SYSTEM_ZLIB OFF CACHE BOOL "" FORCE)  # triggers our vendored zlibstatic path
+endif()
 add_subdirectory("${PROJECT_SOURCE_DIR}/lib/libchdr" "${CMAKE_BINARY_DIR}/lib/libchdr" EXCLUDE_FROM_ALL)
 
 file(GLOB_RECURSE MAIN_FILES "${PROJECT_SOURCE_DIR}/src/main/*.cpp"
