--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,12 @@ endif()
 # Temporary hack. Add libchdr here instead of src/main/CMakeLists.txt to solve a custom target name conflict
 # fluidsynth and zstd both define the target 'uninstall', but zstd gracefully handles if it's already defined,
 # fluidsynth does not. We therefore must have it defined by fluidsynth first.
+if (ZLIB_FOUND)
+  set(WITH_SYSTEM_ZLIB ON  CACHE BOOL "[libchdr] Use system provided zlib library" FORCE)
+else()
+  # triggers our vendored zlibstatic path instead of libchdr's vendored zlib
+  set(WITH_SYSTEM_ZLIB OFF CACHE BOOL "[libchdr] Use system provided zlib library" FORCE)
+endif()
 add_subdirectory("${PROJECT_SOURCE_DIR}/lib/libchdr" "${CMAKE_BINARY_DIR}/lib/libchdr" EXCLUDE_FROM_ALL)
 
 if(ENABLE_CLI)
