--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -93,6 +93,8 @@ add_executable(
   widgets/TitleBar.h
   workarea/HexView.cpp
   workarea/HexView.h
+  workarea/HexViewRhiRenderer.cpp
+  workarea/HexViewRhiRenderer.h
   workarea/HexViewRhiWidget.cpp
   workarea/HexViewRhiWidget.h
   workarea/HexViewRhiWindow.cpp
