abstract RhiWidget and RhiWindow into RhiHost class

--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -93,8 +93,11 @@ add_executable(
   widgets/TitleBar.h
   workarea/HexView.cpp
   workarea/HexView.h
+  workarea/HexViewRhiHost.cpp
+  workarea/HexViewRhiHost.h
   workarea/HexViewRhiRenderer.cpp
   workarea/HexViewRhiRenderer.h
+  workarea/HexViewRhiTarget.h
   workarea/HexViewRhiWidget.cpp
   workarea/HexViewRhiWidget.h
   workarea/HexViewRhiWindow.cpp
