vgmtrans-shell: Preliminary implementation of introspection tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,10 @@ endif()
 
 option(ENABLE_UI_QT "Build the UI (Qt)" ON)
 option(ENABLE_CLI "Build the CLI application" ON)
+option(ENABLE_SHELL "Build the shell application" ON)
 
+add_subdirectory("${PROJECT_SOURCE_DIR}/lib/fmt")
+set(SPDLOG_FMT_EXTERNAL ON CACHE BOOL "Use external fmt library")
 add_subdirectory("${PROJECT_SOURCE_DIR}/lib/spdlog")
 add_subdirectory("${PROJECT_SOURCE_DIR}/lib/mio")
 
