--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,3 +9,8 @@ if(ENABLE_CLI)
   message(STATUS "Building CLI application")
   add_subdirectory(ui/cli)
 endif()
+
+if(ENABLE_SHELL)
+  message(STATUS "Building shell application")
+  add_subdirectory(ui/shell)
+endif()
