--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ add_compile_definitions($<$<NOT:$<CONFIG:Debug>>:NDEBUG>)
 # Use ccache if present on the system
 find_program(CCACHE ccache)
 if(CCACHE)
+  message(STATUS "Using ccache: ${CCACHE}")
+  set(CMAKE_C_COMPILER_LAUNCHER ${CCACHE})
   set(CMAKE_CXX_COMPILER_LAUNCHER ${CCACHE})
 endif()
 
