Add HexView glow render pipeline

--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -143,6 +143,8 @@ qt_add_shaders(
     workarea/hexview/shaders/hexglyph.vert
     workarea/hexview/shaders/hexglyph.frag
     workarea/hexview/shaders/hexscreen.vert
+    workarea/hexview/shaders/hexedge.vert
+    workarea/hexview/shaders/hexedge.frag
     workarea/hexview/shaders/hexcomposite.frag
 )
 
